--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -15,7 +15,15 @@ body {
   font-family: Helvetica, "Microsoft YaHei", Arial, sans-serif;
   font-size: 14px;
 }
-
+/* User register page */
+.register-page {
+  img.captcha {
+    cursor: pointer;
+    border: 1px solid #ced4da;
+    border-radius: 4px;
+    padding: 3px;
+  }
+}
 /* header */
 
 .navbar-static-top {
